# llm-jp-dpo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  train.py
accelerate_configs/: zero2.yaml
