[tool.poetry]
name = "llm-jp-dpo"
version = "0.1.0"
description = "Scripts to train LLMs with DPO"
authors = ["Taka008 <kodama@nlp.ist.i.kyoto-u.ac.jp>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
